Bug 545710 - Username/password fields are too fat and cut off labels in portrait Use css @media to detect if we're narrow and shrink the width of input/buttons.

--- a/source/chrome/content/notification.css
+++ b/source/chrome/content/notification.css
@@ -1,3 +1,17 @@
+@media (min-width: 500px) {
+  #weave-user textbox, #weave-pass textbox, #weave-secret textbox,
+  #weave-connect button, #weave-disconnect button, #weave-sync button {
+    width: 300px;
+  }
+}
+
+@media (max-width: 500px) {
+  #weave-user textbox, #weave-pass textbox, #weave-secret textbox,
+  #weave-connect button, #weave-disconnect button, #weave-sync button {
+    width: 180px;
+  }
+}
+
 treechildren::-moz-tree-image(container, OrganizerQuery_MobileBookmarks) {
   list-style-image: url(chrome://weave/skin/mobile-icon.png);
 }
